# FlightProjectA

./: CMakeLists.txt  Command.h  ConditionParser.cpp  ConditionParser.h  ConnectCommand.cpp  ConnectCommand.h  DataReaderServer.cpp  DataReaderServer.h  DefineVarCommand.cpp  DefineVarCommand.h  LexerClass.cpp  LexerClass.h  Makefile  OpenServerCommand.cpp  OpenServerCommand.h  ParserClass.cpp  ParserClass.h  Project.cbp  TCPClient.cpp  TCPClient.h  assignmentCommand.cpp  assignmentCommand.h  ifCommand.cpp  ifCommand.h  loopCommand.cpp  loopCommand.h  main.cpp  parserClass.cpp  parserClass.h  printCommand.cpp  printCommand.h  sleepCommand.cpp  sleepCommand.h  symTblClass.cpp  symTblClass.h
